# openapimap

./: .gitignore  README.md  pyproject.toml
openapi_vulnscan/: __main__.py  console.py  scanner.py
openapimap/: __init__.py  __main__.py  decorators.py  logger.py  openapimap.py  utils.py
tests/: test_openapi_vscan.py
